versioned_docs/version-23.2/reference/rpk/rpk-plugin/rpk-plugin-list.mdx
---
title: rpk plugin list
rpk_version: (rev )
---

<head>
  <meta name="title" content="rpk plugin list | Redpanda Docs" />
  <meta name="description" content="rpk plugin list" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-plugin/rpk-plugin-list/" />
</head>

List all available plugins.

By default, this command fetches the remote manifest and prints plugins
available for download. Any plugin that is already downloaded is prefixed with
an asterisk. If a locally installed plugin has a different `SHA-256 SUM` as the one
specified in the manifest, or if the `SHA-256 SUM` could not be calculated for the
local plugin, an additional message is printed.

You can specify `--local` to print all locally installed plugins, as well as
whether you have "shadowed" plugins (the same plugin specified multiple times).

## Usage

```bash
rpk plugin list [flags]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for list.</td>
    </tr>
    <tr>
      <td>-l, --local</td>
      <td>-</td>
      <td>List locally installed plugins and shadowed plugins.</td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda or rpk config file; default search paths are
        ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.
      </td>
    </tr>
    <tr>
      <td>-X, --config-opt</td>
      <td>stringArray</td>
      <td>
        Override rpk configuration settings; '-X help' for detail or '-X list'
        for terser detail.
      </td>
    </tr>
    <tr>
      <td>--profile</td>
      <td>string</td>
      <td>rpk profile to use.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging.</td>
    </tr>
  </tbody>
</table>
